Thu Feb 18 13:13:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
          Fixed gcc compile error

Thu Feb 18 12:33:06 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/ContentFilteredTopic.cpp:
        * connectors/dds4ccm/impl/ndds/DataReader.cpp:
        * connectors/dds4ccm/impl/ndds/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
          Using the ACE_NEW_* marcros instead of the
          regular C++ new.

Thu Feb 18 11:36:08 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/TwoTopics/*:
          Test to check whether the generated exec code
          compiles without errors when defining two topics
          in one connector.

Thu Feb 18 09:00:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/FixedSizeStruct/EventConnector/*:
          Added test to test fixed size data. Fixed size data is handled
          in a different way. This'll result in compliler errors when not
          coded properly.

Thu Feb 18 08:37:49 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/TestCoverage.ods:
          Updated

        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
          Added some more tracing.

        * connectors/dds4ccm/tests/FixedSizeStruct/*:
          Added test to test fixed size data. Fixed size data is handled
          in a different way. This'll result in compliler errors when not
          coded properly.

        * connectors/dds4ccm/tests/QueryFilter/Receiver/QueryFilter_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/QueryFilter/Receiver/QueryFilter_Test_Receiver_exec.cpp:
          Improved the way the Receiver receives data.

Thu Feb 18 08:30:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
          Fixed compile error with fixed size datatypes
